# ledger-dashboard

./: README.md
.github/workflows/: backend-cd.yml  backend-ci.yml  frontend-cd.yml  frontend-ci.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  backend_db.yml  fly.toml
backend/src/: alpha_vantage.rs  auth.rs  config.rs  cryptocurrencies.json  db.rs  file_utils.rs  git.rs  hledger.rs  http.rs  ib.rs  import_account.rs  main.rs  n26.rs  prices.rs  saltedge.rs  scheduler.rs  templater.rs  test_statics.rs  transactions.rs
backend/src/api/: accounts.rs  balance.rs  journal.rs  mod.rs  prices.rs  reports.rs  rules.rs  transactions.rs  transactions_ing.rs  transactions_n26.rs  transactions_utils.rs
backend/src/api/transactions/: ib.rs  mod.rs  requests.rs  routes.rs
backend/src/model/: aligned_data.rs  balance.rs  balance_response.rs  hledger_transaction.rs  ib_report.rs  income_statement.rs  mod.rs  n26_account.rs  n26_accounts.rs  n26_transaction.rs  n26transaction.rs  real_transaction.rs  recorded_transaction.rs  rule.rs  saltedge_account.rs  saltedge_transaction.rs  token_data.rs  transaction_request.rs  transaction_response.rs
frontend/: .eslintrc.json  .gitignore  Dockerfile  entrypoint.sh  fly.toml  nginx.conf  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css
frontend/src/Components/: Account.tsx  Accounts.tsx  App.tsx  EditRuleModal.tsx  Import.tsx  LedgerAccountsDropdown.tsx  Plot.tsx  RecordTransactionModal.tsx  RecordTransactionModalContent.tsx  RecordTransactionsButtons.tsx  TransactionSummary.tsx
frontend/src/Components/Login/: Login.tsx  useApiKey.ts
frontend/src/Components/Reports/: DateRangeMenu.tsx  IncomeStatement.tsx  IncomeStatementPlot.tsx  NetWorth.tsx  NetWorthPlot.tsx  bar.js  distr.js  quadtree.js
frontend/src/Components/Rules/: Posting.tsx  PostingsTable.tsx  Rule.tsx  Rules.tsx  RulesModal.tsx  RulesTable.tsx
frontend/src/Components/Save/: DirectoryListing.tsx  DirectoryListingFile.tsx  Save.tsx
frontend/src/Components/Transactions/: AccountName.tsx  GeneratedTransaction.tsx  (+3 more)
frontend/src/Models/: Balance.ts  HledgerTransaction.ts  ImportAccount.ts  ImportRow.ts  IncomeStatementResponse.ts  N26Transaction.ts  RecordedTransaction.ts  Rule.ts  Transaction.ts  TransactionRequest.ts
frontend/src/Utils/: AccountsContext.tsx  BackendRequester.ts  Config.ts  TextUtils.ts
