[package]
name = "backend"
version = "0.1.1"
authors = ["Sam Jeeves"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
actix = "0.10.0"
actix-web = "3.3"
actix-rt = "1"
actix-service = "1.0"
actix-cors = "0.5"
actix-web-httpauth = "0.5"

dotenv = "0.15"
log = "*"
env_logger = "0.8"
async-trait = "0.1"

reqwest = { version = "0.10", features = ["json"] } # waiting on actix web to use actix 0.11. Seems this is coming in actix web v4
futures = "*"
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
serde_json = "1"
serde_regex = "1"
serde-xml-rs = "0.4"
csv = "1"
rust_decimal = { version ="1", features = ["serde-float"] }

rustbreak = { version = "2.0.0", features = ["yaml_enc"] }
regex = "1"
handlebars = "3"
cached = "0.23"

git2 = "0.13"
base64 = "0.13"

[dev-dependencies]
lazy_static = "1"