[package]
name = "backend"
version = "0.1.1"
authors = ["Sam Jeeves"]
edition = "2018"

[profile.release]
#debug = true
lto = true

[dependencies]
actix = "0.12.0"
actix-rt = "2"
actix-service = "2"
actix-web = "4.0.0-beta.9"
actix-cors = "0.6.0-beta.1"
actix-web-httpauth = "0.6.0-beta.1"

dotenv = "0.15"
log = "*"
env_logger = "0.9"
async-trait = "0.1"

reqwest = { version = "0.11", features = ["json"] }
futures = "*"
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
serde_json = "1"
serde_regex = "1"
serde-xml-rs = "0.5"
csv = "1"
rust_decimal = { version ="1", features = ["serde-float"] }

regex = "1"
handlebars = "4"

mongodb = "2"
bson = "2"

git2 = "0.13"
base64 = "0.13"

[dev-dependencies]
lazy_static = "1"